force-app/main/default/objects/Question__c/Question__c.object-meta.xml
<CustomObject>
    <description>Объект Question олицетворяет вопрос. Содержит ссылку на survey, общую позицию вопроса в списке и флажок видимости (True по дефолту). Видимость вопроса важна, если у нас связанные вопрос, и зависимый вопрос не должен быть виден по достижении условий. Содержит сам текст вопроса, флажок переиспользования вопроса, и его тип(picklist, radiobutton, checkbox и т.д.).</description>
    <label>Question</label>
    <nameField>
        <displayFormat>SQ-{00000}</displayFormat>
        <label>Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>