force-app/main/default/objects/Question__c/fields/IsReusable__c.field-meta.xml
<CustomField>
    <fullName>IsReusable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsReusable</label>
    <type>Checkbox</type>
</CustomField>