force-app/main/default/objects/Question__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>The position of the question in the survey.</description>
    <label>Position</label>
    <length>25</length>
    <type>Text</type>
</CustomField>